k8s/eks/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: spring

  template:
    metadata:
      labels:
        app: spring

    spec:
      containers:
        - name: spring-container
          image: "131745734264.dkr.ecr.ap-northeast-2.amazonaws.com/devops-practice-backend:56c4c486f64ccf2efded41213a768aaa918d538b"
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
