k8s/eks/spring-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: spring-service

spec:
  type: ClusterIP

  selector:
    app: spring

  ports:
    - port: 8080
      targetPort: 8080
