k8s/eks/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-ingress
  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:131745734264:certificate/ae619e46-bfa2-47ca-9871-347b07913b8e"
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  rules:
    - host: api.yuhyun-kim.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8080
